# imsi-rails

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  package-lock.json  package.json  plan.md
.github/workflows/: deploy-imsi.yml
api/: openapi.yaml
apps/web/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
cmd/imsi-api/: main.go
crates/imsi-core/: Cargo.toml
crates/imsi-core/src/: adapter.rs  audit.rs  lib.rs  lifecycle.rs  registry.rs  routing.rs
docs/: backend-runtime-review.md  frontend-framework-review.md  github-issues.md  masterplan.md  performance-budgets.md  prd.md  reality-register.md  research-and-architecture.md  ui-ux-refactor-plan.md  ui-ux-research-notes.md  users-brand-design-language.md
docs/adr/: 0001-frontend-ux-architecture.md  0001-runtime-and-hot-path.md  0002-eventing-and-storage.md  0003-frontend-visual-stack.md
docs/implementation-notes/: circuit-breaker-state-machine.md  core-routing-domain.md  fx-cost-board.md  health-event-ingestion.md  latency-downtime-drilldowns.md  policy-simulator-shadow-routing.md  provider-corridor-scorecards.md  route-configuration-ui.md  transaction-intake-api.md  vue-control-room-shell.md
internal/auth/: http.go  ldap.go  middleware.go  oidc.go  password.go  service.go  service_test.go  store.go  types.go
internal/core/: adapter.go  adapter_test.go  audit.go  audit_test.go  lifecycle.go  lifecycle_test.go  registry.go  registry_test.go  routing.go  routing_test.go
internal/dashboard/: format.go  http.go  seed.go  service.go  (+2 more)
landing/: app.js  index.html  styles.css
(+48 files in other folders)
