[package]
name = "imsi-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"

